--- a/SmartMask/app/src/main/res/layout/fragment_profile.xml
+++ b/SmartMask/app/src/main/res/layout/fragment_profile.xml
@@ -173,6 +173,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtMac" />
 
+    <Button
+        android:id="@+id/btnLogOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOG OUT"
+        android:textAlignment="center"
+        android:textColor="#003249"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="583dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
