--- a/SmartMask/app/src/main/res/layout/fragment_options.xml
+++ b/SmartMask/app/src/main/res/layout/fragment_options.xml
@@ -23,6 +23,7 @@
         android:background="@drawable/bottom_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
@@ -253,6 +254,43 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="153dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="636dp"
+        android:text="TEMPERATURE:"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.612"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtValueTemperature"
+        android:layout_width="40dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="636dp"
+        android:autoText="false"
+        android:text="30"
+        android:textAlignment="textEnd"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="311dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="38dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="16dp"
+        android:text="°C"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="637dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
