--- a/SmartMask/app/src/main/res/layout/fragment_profile.xml
+++ b/SmartMask/app/src/main/res/layout/fragment_profile.xml
@@ -4,25 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragments.ProfileFragment">
+    tools:context=".ProfileFragment">
 
     <View
-        android:id="@+id/view10"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:background="#8974d7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view11"
+        android:id="@+id/view7"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:background="@drawable/top_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view10" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/view8"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:background="@drawable/bottom_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -177,13 +177,14 @@
         android:id="@+id/btnLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="LOG OUT"
         android:textAlignment="center"
         android:textColor="#003249"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="583dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
