--- a/SmartMask/app/src/main/res/layout/fragment_settings.xml
+++ b/SmartMask/app/src/main/res/layout/fragment_settings.xml
@@ -9,20 +9,20 @@
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:background="#8974d7"
+        android:layout_height="200dp"
+        android:background="@drawable/top_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view4"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="200dp"
-        android:background="@drawable/top_background"
+        android:background="@drawable/bottom_background"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
@@ -43,11 +43,11 @@
         android:id="@+id/imageView7"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/view"
         app:srcCompat="@drawable/ic_smart" />
 
     <TextView
