--- a/SmartMask/app/src/main/res/layout/activity_dashboard.xml
+++ b/SmartMask/app/src/main/res/layout/activity_dashboard.xml
@@ -297,7 +297,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/ic_baseline_login_24"
-                android:text="LOG OUT" />
+                android:text="REPORT" />
         </com.google.android.material.tabs.TabLayout>
     </androidx.cardview.widget.CardView>
     <androidx.viewpager2.widget.ViewPager2
