--- a/SmartMask/app/src/main/res/layout/activity_profile.xml
+++ b/SmartMask/app/src/main/res/layout/activity_profile.xml
@@ -159,7 +159,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="614dp" />
+        app:layout_constraintTop_toTopOf="@+id/view8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
