--- a/SmartMask/app/src/main/res/layout/activity_settings.xml
+++ b/SmartMask/app/src/main/res/layout/activity_settings.xml
@@ -103,6 +103,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/backgrund_bottom"
+        android:onClick="Configure"
         android:text="CONFIGURE VALUES"
         android:textColor="#003249"
         android:textSize="20sp"
