--- a/SmartMask/app/src/main/res/layout/activity_profile1.xml
+++ b/SmartMask/app/src/main/res/layout/activity_profile1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile">
+    tools:context=".Profile1">
 
     <View
         android:id="@+id/view7"
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/asad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/asad"
         app:srcCompat="@drawable/ic_profile" />
 
     <TextView
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imgUser" />
 
     <EditText
-        android:id="@+id/txtNombre"
+        android:id="@+id/txtMyNombre1"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <EditText
-        android:id="@+id/txtUser"
+        android:id="@+id/txtMyUser1"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -96,10 +96,10 @@
         android:paddingStart="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
+        app:layout_constraintTop_toBottomOf="@+id/txtMyNombre1" />
 
     <EditText
-        android:id="@+id/txtApellido"
+        android:id="@+id/txtMyApellido1"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -112,7 +112,7 @@
         android:paddingStart="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtUser" />
+        app:layout_constraintTop_toBottomOf="@+id/txtMyUser1" />
 
     <Button
         android:id="@+id/btnEdit"
@@ -129,12 +129,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
+        app:layout_constraintTop_toBottomOf="@+id/txtMyCorreo1" />
 
 
 
     <EditText
-        android:id="@+id/txtCorreo"
+        android:id="@+id/txtMyCorreo1"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
@@ -147,7 +147,7 @@
         android:paddingStart="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />
+        app:layout_constraintTop_toBottomOf="@+id/txtMyApellido1" />
 
     <Button
         android:id="@+id/btnLogOut"
@@ -160,6 +160,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view8" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
