--- a/SmartMask/app/src/main/res/layout/activity_profile1.xml
+++ b/SmartMask/app/src/main/res/layout/activity_profile1.xml
@@ -108,7 +108,6 @@
         android:background="@drawable/edit_text_background"
         android:ems="10"
         android:hint="Velez Araujo"
-        android:inputType="textPassword"
         android:paddingStart="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +152,7 @@
         android:id="@+id/btnLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:text="LOG OUT"
         android:textAlignment="center"
         android:textColor="#003249"
