--- a/SmartMask/app/src/main/res/layout/activity_profile1.xml
+++ b/SmartMask/app/src/main/res/layout/activity_profile1.xml
@@ -23,6 +23,7 @@
         android:background="@drawable/bottom_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -40,16 +41,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgUser"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="106dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/asad"
-        app:srcCompat="@drawable/ic_profile" />
+        app:layout_constraintTop_toBottomOf="@+id/asad" />
 
     <TextView
         android:id="@+id/textView6"
@@ -152,7 +156,7 @@
         android:id="@+id/btnLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
         android:text="LOG OUT"
         android:textAlignment="center"
         android:textColor="#003249"
