--- a/SmartMask/app/src/main/res/layout/activity_modal_information.xml
+++ b/SmartMask/app/src/main/res/layout/activity_modal_information.xml
@@ -65,6 +65,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/lblppmInternal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="150"
@@ -91,6 +92,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/lblppmExternal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="350"
@@ -117,6 +119,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/lblNumAlertas"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="15"
