--- a/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
@@ -7,11 +7,18 @@
     android:orientation="vertical"
     tools:context=".AirQuiality">
     
-    <androidx.appcompat.widget.LinearLayoutCompat
+   <!-- <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@+id/linearChar"/>
+        android:id="@+id/linearChar"/>-->
+   <com.github.mikephil.charting.charts.BarChart
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/barChart"/>
+
+
 
 
 
