--- a/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
@@ -3,25 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
     android:orientation="vertical"
     tools:context=".AirQuiality">
-    
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+      android:text="hola"/>
+
+
    <!-- <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/linearChar"/>-->
    <com.github.mikephil.charting.charts.BarChart
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/barChart"/>
-
-
-
-
-
+       android:id="@+id/barChart"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_weight="1" />
 
 
 </LinearLayout>
