--- a/SmartMask/app/src/main/res/layout/activity_menu.xml
+++ b/SmartMask/app/src/main/res/layout/activity_menu.xml
@@ -30,7 +30,7 @@
         android:id="@+id/textView5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:text="Menu"
         android:textColor="#343a40"
         android:textSize="65sp"
@@ -39,21 +39,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.869"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
-        app:srcCompat="@drawable/ic_options" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="200dp"
         android:layout_weight="3"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +162,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-black"
-                        android:text="Options"
+                        android:text="Charts"
                         android:textColor="#343a40"
                         android:textSize="20sp" />
                 </LinearLayout>
@@ -187,8 +176,8 @@
                 android:clickable="true"
                 android:elevation="0dp"
                 android:focusable="true"
-                android:onClick="AirQualityTable"
                 android:foreground="?android:attr/selectableItemBackground"
+                android:onClick="AirQualityTable"
                 app:cardBackgroundColor="#fffffa"
                 app:cardCornerRadius="20dp">
 
@@ -215,11 +204,13 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-        <LinearLayout
+
+        <!--<LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="horizontal">
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/btnlog_off"
                 android:layout_width="150dp"
@@ -243,6 +234,7 @@
                         android:layout_height="100dp"
                         android:layout_margin="5dp"
                         android:background="@drawable/ic_baseline_multiline_chart_24" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -252,8 +244,28 @@
                         android:textSize="20sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+        </LinearLayout>-->
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/btnSalir"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view8"
+        app:layout_constraintEnd_toEndOf="@+id/view8"
+        app:srcCompat="@drawable/ic_baseline_login_24" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Log Out"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
