--- a/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
@@ -6,10 +6,10 @@
     android:layout_height="300dp"
     android:orientation="vertical"
     tools:context=".AirQuiality">
-   <TextView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-      android:text="hola"/>
+<!--   <TextView-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="match_parent"-->
+<!--      android:text="hola"/>-->
 
 
    <!-- <androidx.appcompat.widget.LinearLayoutCompat
@@ -20,7 +20,7 @@
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content"
+       android:layout_height="333dp"
        android:layout_weight="1" />
 
 
