--- a/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quiality.xml
@@ -8,8 +8,7 @@
     tools:context=".AirQuiality">
    <TextView
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-      android:text="hola"/>
+       android:layout_height="wrap_content"/>
 
 
    <!-- <androidx.appcompat.widget.LinearLayoutCompat
@@ -22,6 +21,5 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
-
 
 </LinearLayout>
