--- a/SmartMask/app/src/main/res/layout/activity_air_quality_table.xml
+++ b/SmartMask/app/src/main/res/layout/activity_air_quality_table.xml
@@ -117,6 +117,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtFechaInicio" />
 
     <Button
+        android:id="@+id/btnshearhregistry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
