--- a/SmartMask/app/src/main/res/layout/activity_configure_values.xml
+++ b/SmartMask/app/src/main/res/layout/activity_configure_values.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="100dp"
         android:text="Setting Carbon Dioxide Levels"
-        android:textColor="@color/black"
+        android:textColor="#003249"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="24dp"
@@ -44,7 +44,7 @@
         android:layout_marginStart="94dp"
         android:layout_marginTop="496dp"
         android:text="Setting Butano Levels"
-        android:textColor="@color/black"
+        android:textColor="#003249"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="24dp"
@@ -116,7 +116,7 @@
         android:layout_marginStart="74dp"
         android:layout_marginTop="363dp"
         android:text="Setting Ammonia Levels"
-        android:textColor="@color/black"
+        android:textColor="#003249"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="24dp"
@@ -188,7 +188,7 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="234dp"
         android:text="Setting Carbon Monoxide Levels"
-        android:textColor="@color/black"
+        android:textColor="#003249"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="24dp"
@@ -289,7 +289,7 @@
         android:layout_marginStart="61dp"
         android:layout_marginTop="39dp"
         android:text="Configure Values"
-        android:textColor="@color/black"
+        android:textColor="#003249"
         android:textSize="34sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="24dp"
@@ -322,14 +322,18 @@
 
     <Button
         android:id="@+id/btnValores"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="245dp"
+        android:layout_height="45dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="141dp"
-        android:layout_marginBottom="59dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="63dp"
 
-        android:text="Guardar"
-        android:textColor="#003249" />
+        android:layout_marginBottom="57dp"
+        android:background="@drawable/backgrund_bottom"
+        android:text="SAVE"
+        android:textColor="#003249"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
